# ydjs-references

./: .bat  .gitignore  README.md  _init-win.sh  custom.gitattributes  custom.gitignore  init.sh
.gitignores/: Latex.gitignore  TeX.gitignore
LICENSEs/: agpl-3.0.txt  apache-2.0.txt  bsd-2-clause.txt  bsd-3-clause.txt  gpl-2.0.txt  gpl-3.0.txt  lgpl-2.1.txt  mit.txt
base-c/: CMakeLists.txt  Makefile
base-c/src/: main.cpp
base-cpp/: .bat  .gitignore  CMakeLists.txt  README.md  ds  on_vcpkg.sh  vcpkg.json
base-cpp-lib/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
base-cpp-lib/include/my_project/: dynamic_lib.h  static_lib.h
base-cpp-lib/scripts/: on_vcpkg-win.sh  run-win.sh
base-cpp-lib/src/app/: CMakeLists.txt  main.cpp
base-cpp-lib/src/libcore/: CMakeLists.txt  static_lib.cpp
base-cpp-lib/src/libcount/: CMakeLists.txt  dynamic_lib.cpp
base-cpp-lib/tests/: CMakeLists.txt  tests.cpp
base-cpp/scripts/: on_vcpkg-win.sh  run-win.sh
base-cpp/src/: main.cpp
base-make/: hello.c
bash_compiler/: 01-build-cxx.sh  04-deploy-cxx.sh
bash_compiler/include/: bash_compiler.h  fibonacci.h
document-cover_letter/: .gitignore  com01-skcnc.tex  com02-siemans.tex
document-cover_letter/com03-siemens_industry/: analysis.tex
document-cover_letter/com04-t_mobile/: analysis.tex
document-cover_letter/com05-salesforce/: analysis.tex
document-cover_letter/com06-microsoft/: analysis.tex
document-cover_letter/com07-ibm/: analysis.tex
document-resume/: .gitignore  comp02.tex  main.tex  masters_in_math.md  private-jaehoonsong.tex  public.tex  template.tex
document-resume_refs/: resume.tex
exp2212-gt_compsci_ta/CS2050_F22_HW/: HW1.tex  HW1_with_rubric.tex  preamble.tex
exp2212-gt_compsci_ta/CS2050_Homework_Drafts_Su22/: HW1_Draft.tex  HW1_Solutions.tex  HW2_Solutions.tex  HW3_Draft.tex  HW4_Draft.tex  HW5_Solutions.tex  HW7_Draft.tex  HW7_Solutions.tex  main.tex
exp2212-gt_compsci_ta/CS_2050_Fall_2022_Homework_2/: tex.tex
exp2212-gt_compsci_ta/LaTeX_docs/: main.tex
exp2212-gt_compsci_ta/MATH_AMS_docs/: main.tex
exp2212-gt_compsci_ta/_HW_Solution_Team/: README
exp2412-gt_physics_ta/: README.txt
exp2412-gt_physics_ta/__TA_02_2211_Lab_Codes/: 2211-lab1working.py  2211-lab2working.py  springmass2d.csv
exp2412-gt_physics_ta/__TA_summary/: ___All_Errors.txt
preamble/: _.tex  _ref_preamble.tex  columns.tex  core.tex  cs-dsa.tex  font-korean.tex  font.tex  group.tex  layout-letter.tex  math-graph.tex  math-tikz.tex  math.tex  operator.tex  reference-bibliography.tex  reference-index.tex  resume.tex  symbol.tex  temp
project2008-pygame/(0) pygame source code/: boss.py  character.py  enemy.py  main_menu.py  random_battle.py  story1.py  story2.py  story3.py  tutorial.py
project2008-pygame/Pygame Documentation/: (1-Input) pygame.image (Image).py  (1-Input) pygame.mixer (Effect Sound).py  (1-Input) pygame.mouse (Mouse).py  (2-Process) pygame.font (Font).py  (2-Process) pygame.transform (Image).py  (3-Output) pygame.display (Main Surface).py
project2103-northwind_database_query_tool/(1) Instruction/: MidTermAssignment.doc
project2404-client_derbyDB/: .bashrc  build.sh  build.xml  on_kt.sh
project2404-client_derbyDB/scr/: 03-run.sh  build.command
project2404-client_derbyDB/src/: Client.java
project2404-server_derbyDB/: build.sh
project2404-server_derbyDB/scr/: 00-install-linux.sh  00-install-win.sh
project2404-server_derbyDB/src/: DatabaseManager.java  FileManager.java  MainFX.java  MenuScene.java  Server.java  StringManager.java  UserInteraction03.java  module-info.java
project2405-client_derbyDB/: build_backup.xml  deploy.sh
project2405-client_derbyDB/scr/: 01-dependency.sh  02-complie.sh  99-clean.sh
project2405-server_derbyDB/: build.xml
project2405-server_derbyDB-docs/: 04-Miro_whiteboard-UI_UX_info.txt  99-Chat_GPT.txt  Jira_story_point_Fibbonachi.txt  mailing_01-request.eml  mailing_02-request.eml  mailing_03-report.eml  mailing_04-Heart_Disease_Care_App_Project.eml  meeting_setup.txt
project2405-server_derbyDB-docs/01-workspace/: __checklist.txt
project2405-server_derbyDB-docs/02-submissions/: 04-01-initial_client_email_draft_submission.eml
project2405-server_derbyDB-docs/UML/: 00-template - Copy.drawio  01-architecture_diagram+use_case_diagram.drawio  02-finite_state_machine_diagram.drawio  03-er_diagram+domain_model.drawio  04-component_diagram+class_diagram.drawio  (+1 more)
project2405-server_derbyDB-docs/UML-template/: 01-OOA-static-structure-domain_models.drawio  02-OOA-static-behavior-use_case_diagram.drawio  03-OOA-dynamic-behavior-system_sequence_diagram_ssd.drawio  04-OOD-dynamic-behavior-sequence_diagram_sd.drawio  05-OOD-static-structure-design_class_diagram_dcd.drawio  Game01.drawio  Game01_backup.drawio
project2405-server_derbyDB/scr/: build.bat
project2407-game_shadowwalker/: .gitignore
project2408-bash_compiler/: .gitignore  00-init-cxx.sh  01-build-cxx.sh  05-operate.sh  CMakeLists.txt  LICENSE  backup.gitignore  main.c
project2408-bash_compiler/include/: dynamic_lib.h  static_lib.h
project2408-bash_compiler/src/dyna/: dynamic_lib.cpp
project2408-bash_compiler/src/main/: bash_compiler.cpp  fibonacci.cpp  main.cpp
project2408-bash_compiler/src/stat/: static_lib.cpp
project2409-game_shadowwalker/: README.md
project2505-app_tradingbot/: .bat  .gitignore  .start.vbs  .start2.bat  CUMULATIVE_FILE_CHANGES.md  LICENSE  README.md  assets.txt  dev.py  on_venv.sh  sample.csv  sample.json  test_column_order_fix.py  test_cumulative_functionality.py  testbase.py  testdemo.py
project2510-web_jslawgroup/: on_sass.sh  package.json
python-gt01_ds/: .env  main.py  sample.txt
scripts/: file_create.sh  on_venv.sh
scripts-perl/: auto01-assemble_files.pl  auto02-files_to_snakecase.pl  auto03-word_tracker.pl
scripts-temp/: dev00-init.bat  dev01-perl.bat  dev02-git.bat  dev04-bashrc-for_students.sh  dev06-nodejs.sh  dev08-claude_code.sh  dev09-open_ai_gpt.sh  dev99-exec.bat  dev99-temp.bat  dev99-temp.pl
temp/: _.gitignore  dev03-bash.bat  dev04-bashrc.sh  dev05-python.sh  dev07-java.sh  dev99-temp.sh
(+559 files in other folders)
